[package]
name = "wclient"
version = "0.1.0"
edition = "2021"
authors = ["Juan Cáceres <cacexp@gmail.com>"]
license = "Apache-2.0"
readme="README.md"
description = "wclient is a lightweight HTTP client library written in Rust."
homepage = "https://github.com/cacexp/wclient"
repository = "https://github.com/cacexp/wclient"
documentation = "https://docs.rs/wclient/0.1.0/wclient/"
categories = ["network-programming", "web-programming::http-client"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log="0.4"
chrono = "0.4"
url = "2.2.2"
json = "0.12.4"
case_insensitive_hashmap = "1.0.0"

[dev-dependencies]
env_logger = "0.8.4"
