[package]
name = "wclient"
version = "0.1.5"
edition = "2021"
authors = ["Juan Cáceres <cacexp@gmail.com>"]
license = "Apache-2.0"
readme="README.md"
description = "wclient is a lightweight HTTP client library written in Rust."
homepage = "https://github.com/cacexp/wclient"
repository = "https://github.com/cacexp/wclient"
documentation = "https://docs.rs/wclient/0.1.4/wclient/"
categories = ["network-programming", "web-programming::http-client"]
# Ignore files used in tests
exclude = ["/test_resources"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log="0.4"
url = "2.2.2"
json = "0.12.4"
case_insensitive_hashmap = "1.0.0"
rustls = "0.20.2"
rustls-native-certs = "0.6.1"
rustls-pemfile = "0.2.1"
ring = "0.16.20"
lazy_static = "1.4.0"
regex = "1.5.4"
chrono = "0.4"
data-encoding = "2.3.2"

[dev-dependencies]
env_logger = "0.8.4"


[features]
dangerous_configuration = ["rustls/dangerous_configuration"]